--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,14 +17,14 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         generate_statistics: false
-        show_sql: false
+        show_sql: true
         hbm2ddl:
           auto: none
   banner:
     location: classpath:banner.txt
   liquibase:
     enabled: true
-    drop-first: false
+    drop-first: true
     change-log: classpath:db/changelog/db.changelog-master.xml
 
 server:
