--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,7 @@ spring:
         show_sql: true
         hbm2ddl:
           auto: none
+#          auto: create-drop
   banner:
     location: classpath:banner.txt
   liquibase:
