--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,6 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 25MB
-
   jpa:
     properties:
       hibernate:
@@ -28,8 +27,12 @@ spring:
     location: classpath:banner.txt
   liquibase:
     enabled: true
-    drop-first: false
+    drop-first: true
     change-log: classpath:db/changelog/db.changelog-master.xml
 
 server:
   port: 20134
+
+mailing:
+    module:
+      enabled: false
