--- a/module-main/motobudzetapi/src/main/resources/application.yml
+++ b/module-main/motobudzetapi/src/main/resources/application.yml
@@ -29,7 +29,20 @@ spring:
     enabled: true
     drop-first: false
     change-log: classpath:db/changelog/db.changelog-master.xml
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    metrics:
+      enabled: true
+    shutdown:
+      enabled: true
+  prometheus:
+    metrics:
+      export:
+        enabled: true
 server:
   port: 20134
 
