Kafka object JSON serialization plus small design refactoring in createForm

--- a/module-main/mail-module/src/main/resources/application.yml
+++ b/module-main/mail-module/src/main/resources/application.yml
@@ -1,12 +1,32 @@
 server:
   port: 8080
 spring:
+  mail:
+    host: serwer2379308.home.pl
+    port: 587
+    username: info@motobudzet.pl
+    password: dontgotosql
+
+    properties:
+      mail:
+        smtp:
+          ssl:
+            trust: "*"
+            auth: true
+            starttls:
+              enable: true
+            connectiontimeout: 5000
+            timeout: 3000
+            writetimeout: 5000
   kafka:
     bootstrap-servers: localhost:9092
-#  datasource:
+
+#  datasource
 #    url: none
 #  jpa:
 #    hibernate:
 #      ddl-auto: none
 #  liquibase:
 #    enabled: false
+
+
