big visual refactor plus some extras into creation form

--- a/module-main/motobudzetapi/src/main/resources/application.yml
+++ b/module-main/motobudzetapi/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
 #    url: jdbc:postgresql://serwer2379308.home.pl/37515270_motobudzet69
 #    username: 37515270_motobudzet69
-#    password: jamajskiHolender69
+#    password: dontgotosql
 #    url:
 #    username:
 #    password:
