--- a/module-main/motobudzetapi/pom.xml
+++ b/module-main/motobudzetapi/pom.xml
@@ -27,6 +27,28 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <!-- only this origin -->
+<!--        <dependency>-->
+<!--            <groupId>org.seleniumhq.selenium</groupId>-->
+<!--            <artifactId>selenium-java</artifactId>-->
+<!--            <version>4.0.0</version>-->
+<!--        </dependency>-->
+<!--        &lt;!&ndash; add belows for these dependencies version is not 4.0.0 when automatically generated &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.seleniumhq.selenium</groupId>-->
+<!--            <artifactId>selenium-chrome-driver</artifactId>-->
+<!--            <version>4.0.0</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.seleniumhq.selenium</groupId>-->
+<!--            <artifactId>selenium-api</artifactId>-->
+<!--            <version>4.0.0</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.seleniumhq.selenium</groupId>-->
+<!--            <artifactId>selenium-remote-driver</artifactId>-->
+<!--            <version>4.0.0</version>-->
+<!--        </dependency>-->
 <!--        <dependency>-->
 <!--            <groupId>net.sf.ehcache</groupId>-->
 <!--            <artifactId>ehcache</artifactId>-->
@@ -117,29 +139,30 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>com.spotify</groupId>-->
-<!--                <artifactId>dockerfile-maven-plugin</artifactId>-->
-<!--                <version>1.4.13</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>default</id>-->
-<!--                        <goals>-->
-<!--                            <goal>build</goal>-->
-<!--                            &lt;!&ndash; <goal>push</goal> &ndash;&gt; &lt;!&ndash; Zakomentuj lub usuń tę linię, jeśli nie chcesz pushować obrazu &ndash;&gt;-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--                <configuration>-->
-<!--                    <repository>${project.groupId}/${project.artifactId}</repository>-->
-<!--                    <tag>${project.version}</tag>-->
-<!--                    <buildArgs>-->
-<!--                        <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>-->
-<!--                    </buildArgs>-->
-<!--                    <dockerHost>unix:///var/run/docker.sock</dockerHost>-->
-<!--                    <dockerDirectory>${project.basedir}</dockerDirectory>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>1.4.13</version> <!-- Use the latest version available -->
+                <executions>
+                    <execution>
+                        <id>default</id>
+                        <phase>install</phase> <!-- Bind this execution with a lifecycle phase -->
+                        <goals>
+                            <goal>build</goal>
+                            <!-- <goal>push</goal> --> <!-- Zakomentuj lub usuń tę linię, jeśli nie chcesz pushować obrazu -->
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <repository>${project.groupId}/${project.artifactId}</repository>
+                    <tag>${project.version}</tag>
+                    <buildArgs>
+                        <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+                    </buildArgs>
+                    <!-- Jeśli chcesz wskazać inny katalog z dockerfile niż domyślny -->
+                    <!-- <contextDirectory>${project.basedir}/Docker</contextDirectory> -->
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
