--- a/module-main/motobudzetapi/dockerfile
+++ b/module-main/motobudzetapi/dockerfile
@@ -24,3 +24,29 @@ EXPOSE 20134
 
 # Run the application
 ENTRYPOINT ["java","-jar","/app/app.jar"]
+
+
+
+# Stage 1: Build the application
+#FROM maven:3.8.4-openjdk-17 as builder
+#
+#WORKDIR /app
+#
+## Copy the pom.xml and source code
+#COPY ./pom.xml ./pom.xml
+#COPY ./src ./src
+#
+## Build the application without running tests
+#RUN mvn clean install -DskipTests
+#
+## Stage 2: Create the final Docker image
+#FROM openjdk:17-jdk-slim
+#
+#WORKDIR /app
+#
+## Copy the JAR from the build stage
+#COPY --from=builder /app/target/*.jar app.jar
+#
+#EXPOSE 20134
+#
+#ENTRYPOINT ["java","-jar","/app/app.jar"]
