--- a/module-main/docker-compose.yml
+++ b/module-main/docker-compose.yml
@@ -1,16 +1,17 @@
 version: '3'
+
 services:
   main-monolith:
     image: main-monolith:latest
     build:
       context: .
-      dockerfile: ./motobudzetapi/dockerfile
+      dockerfile: ./motobudzetapi/Dockerfile
     container_name: main-monolith
     ports:
       - "20134:20134"
     volumes:
-          - ./files/public:/app/module-main/files/public
-          - ./files/private:/app/module-main/files/private
+      - ./files/public:/app/module-main/files/public
+      - ./files/private:/app/module-main/files/private
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/motobudzet?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
       SPRING_DATASOURCE_USERNAME: postgres
@@ -31,7 +32,9 @@ services:
       - mainmonolith-postgres-data:/var/lib/postgresql/data
       - ./db-init.sql:/docker-entrypoint-initdb.d/db-init.sql
     environment:
-      POSTGRES_PASSWORD: dontgotosql  # This line should be here
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: dontgotosql
+      PGDATA: /data/postgres
     networks:
       - motobudzet
     healthcheck:
@@ -40,8 +43,43 @@ services:
       timeout: 10s
       retries: 2
 
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+    ports:
+      - "5050:80"
+    networks:
+      - motobudzet
+    restart: unless-stopped
+
+#  zipkin:
+#    image: openzipkin/zipkin
+#    container_name: zipkin
+##    environment:
+##      - STORAGE_TYPE=mysql
+##      # Point the zipkin at the storage backend
+##      - MYSQL_HOST=mysql
+##      # Uncomment to enable scribe
+##      # - SCRIBE_ENABLED=true
+##      # Uncomment to enable self-tracing
+##      # - SELF_TRACING_ENABLED=true
+##      # Uncomment to enable debug logging
+##      # - JAVA_OPTS=-Dlogging.level.zipkin2=DEBUG
+#    ports:
+#      - "9411:9411"
+##    depends_on:
+##      - storage
+
 volumes:
   mainmonolith-postgres-data:
+  pgadmin-data:
 
 networks:
   motobudzet:
+    driver: bridge
