--- a/module-main/motobudzetapi/pom.xml
+++ b/module-main/motobudzetapi/pom.xml
@@ -27,33 +27,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
-        <!-- only this origin -->
-<!--        <dependency>-->
-<!--            <groupId>org.seleniumhq.selenium</groupId>-->
-<!--            <artifactId>selenium-java</artifactId>-->
-<!--            <version>4.0.0</version>-->
-<!--        </dependency>-->
-<!--        &lt;!&ndash; add belows for these dependencies version is not 4.0.0 when automatically generated &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.seleniumhq.selenium</groupId>-->
-<!--            <artifactId>selenium-chrome-driver</artifactId>-->
-<!--            <version>4.0.0</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.seleniumhq.selenium</groupId>-->
-<!--            <artifactId>selenium-api</artifactId>-->
-<!--            <version>4.0.0</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.seleniumhq.selenium</groupId>-->
-<!--            <artifactId>selenium-remote-driver</artifactId>-->
-<!--            <version>4.0.0</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>net.sf.ehcache</groupId>-->
-<!--            <artifactId>ehcache</artifactId>-->
-<!--            <version>2.10.9.2</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+            <version>1.2.0</version>
+        </dependency>
         <dependency>
             <groupId>javax.cache</groupId>
             <artifactId>cache-api</artifactId>
@@ -142,14 +120,14 @@
             <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>dockerfile-maven-plugin</artifactId>
-                <version>1.4.13</version> <!-- Use the latest version available -->
+                <version>1.4.13</version>
                 <executions>
                     <execution>
                         <id>default</id>
-                        <phase>install</phase> <!-- Bind this execution with a lifecycle phase -->
+                        <phase>install</phase>
                         <goals>
                             <goal>build</goal>
-                            <!-- <goal>push</goal> --> <!-- Zakomentuj lub usuń tę linię, jeśli nie chcesz pushować obrazu -->
+                            <!-- <goal>push</goal> -->
                         </goals>
                     </execution>
                 </executions>
@@ -159,7 +137,7 @@
                     <buildArgs>
                         <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
-                    <!-- Jeśli chcesz wskazać inny katalog z dockerfile niż domyślny -->
+                    <!-- Jeśli chcesz wskazać inny katalog z Dockerfile niż domyślny -->
                     <!-- <contextDirectory>${project.basedir}/Docker</contextDirectory> -->
                 </configuration>
             </plugin>
