--- a/module-main/motobudzetapi/src/main/resources/application.yml
+++ b/module-main/motobudzetapi/src/main/resources/application.yml
@@ -43,8 +43,8 @@ spring:
   banner:
     location: classpath:banner.txt
   liquibase:
-    enabled: true
-    drop-first: true
+#    enabled: true
+    drop-first: false
     change-log: classpath:db/changelog/db.changelog-master.xml
 management:
   endpoints:
