fixed advertisement audity listener , while authentication user principal extract from token with requierd user id parameter

--- a/module-main/motobudzetapi/src/main/resources/application.yml
+++ b/module-main/motobudzetapi/src/main/resources/application.yml
@@ -49,7 +49,7 @@ spring:
     location: classpath:banner.txt
   liquibase:
     enabled: true
-    drop-first: false
+    drop-first: true
     change-log: classpath:db/changelog/db.changelog-master.xml
 management:
   endpoints:
