some refactoring with optimization

--- a/module-main/pom.xml
+++ b/module-main/pom.xml
@@ -4,7 +4,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>pl.motobudzet</groupId>
-    <artifactId>root-directory</artifactId>
+    <artifactId>mb-project</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>MotoBudzetAPI</name>
