--- a/motobudzetapi/src/main/resources/application.yml
+++ b/motobudzetapi/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: mb-api
   zipkin:
-    baseUrl: http://localhost:9411
+    baseUrl: http://zipkin:9411
   sleuth:
     sampler:
       probability: 1.0
@@ -54,9 +54,16 @@ spring:
     drop-first: false
     change-log: classpath:db/changelog/db.changelog-master.xml
 management:
+  metrics:
+    tags:
+      application: mb-api
+  zipkin:
+    tracing:
+      endpoint: http://zipkin:9411/api/v2/spans
   endpoints:
     web:
       exposure:
+#        include: health,info,prometheus
         include: "*"
   endpoint:
     metrics:
@@ -64,12 +71,14 @@ management:
     shutdown:
       enabled: true
   prometheus:
+
     metrics:
       export:
         enabled: true
 
 server:
   port: 20134
+#  port: 443
   ssl:
     key-store-type: PKCS12
     key-store: classpath:keystore.p12
