--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.boot.maven.plugin.version>3.2.0</spring.boot.maven.plugin.version>
         <spring.boot.dependencies.version>3.1.4</spring.boot.dependencies.version>
-        <image>motobudzet/${project.artifactId}:${project.version}</image>
+        <image>michaelkey/${project.artifactId}:${project.version}</image>
     </properties>
 
     <dependencyManagement>
@@ -106,8 +106,11 @@
                             <to>
                                 <image>michaelkey/motobudzet:${project.version}</image>
                                 <auth>
+<!--                                    <fromConfig>-->
+<!--                                        <serverId>docker-hub</serverId>-->
+<!--                                    </fromConfig>-->
                                     <fromConfig>
-                                        <serverId>docker-hub</serverId>
+                                        <credHelper>credential-helper-name</credHelper>
                                     </fromConfig>
                                 </auth>
                             </to>
