--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,26 @@
 version: '3'
 
 services:
+
+
+# openssl pkcs12 -in keystore.p12 -nokeys -out certificate.crt -nodes
+# openssl pkcs12 -in keystore.p12 -nocerts -out private.key -nodes
+#  nginx:
+#    image: nginx:latest
+#    ports:
+#      - "20134:20134"
+#    volumes:
+#      - ./nginx/config.conf:/etc/nginx/nginx.conf:ro
+##      - ./path/to/certificate.crt:/etc/nginx/certificate.crt:ro
+##      - ./path/to/private.key:/etc/nginx/private.key:ro
+#    networks:
+#      - logging
+#    depends_on:
+#      - mb-api
+
   mb-api:
     build: .
     container_name: mb-api
-#    image: motobudzet/mb-api:0.0.1-SNAPSHOT
     image: michaelkey/mb-api:0.0.1-SNAPSHOT
     ports:
       - "20134:20134"
