--- a/nginx/config.conf
+++ b/nginx/config.conf
@@ -1,13 +1,20 @@
 events {}
 
 http {
+    log_format upstreaminfo '$remote_addr - $remote_user [$time_local] '
+                            '"$request" $status $body_bytes_sent '
+                            '"$http_referer" "$http_user_agent" '
+                            '"$http_x_forwarded_for" "$http_x_real_ip"';
+
     server {
-        listen 20134;
-;         ssl_certificate /etc/nginx/certificate.crt;
-;         ssl_certificate_key /etc/nginx/private.key;
+        listen 20130 ssl;
+        ssl_certificate /etc/nginx/certificate.crt;
+        ssl_certificate_key /etc/nginx/private.key;
+        access_log /var/log/nginx/access.log upstreaminfo;
+
         location / {
-            proxy_pass https://mb-api:20135;
-            proxy_set_header Host $host;
+            proxy_pass https://host.docker.internal:20134/;
+            proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
