--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,19 @@ services:
 
 # openssl pkcs12 -in keystore.p12 -nokeys -out certificate.crt -nodes
 # openssl pkcs12 -in keystore.p12 -nocerts -out private.key -nodes
-  nginx:
-    image: nginx:latest
-    ports:
-      - "20130:20130"
-    volumes:
-      - ./nginx/config.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/certificate.crt:/etc/nginx/certificate.crt:ro
-      - ./nginx/new_private.key:/etc/nginx/private.key:ro
-      - ./nginx/logs:/var/log/nginx
-    networks:
-      - logging
-    depends_on:
-      - mb-api
+#  nginx:
+#    image: nginx:latest
+#    ports:
+#      - "20130:20130"
+#    volumes:
+#      - ./nginx/config.conf:/etc/nginx/nginx.conf:ro
+#      - ./nginx/certificate.crt:/etc/nginx/certificate.crt:ro
+#      - ./nginx/new_private.key:/etc/nginx/private.key:ro
+#      - ./nginx/logs:/var/log/nginx
+#    networks:
+#      - logging
+#    depends_on:
+#      - mb-api
 
   mb-api:
     build: .
