--- a/pom.xml
+++ b/pom.xml
@@ -109,8 +109,8 @@
                             <to>
                                 <image>michaelkey/motobudzet:${project.version}</image>
                                 <auth>
-                                    <username>xxx</username>
-                                    <password>xxx</password>
+                                    <username>kowalkowski.michal24@gmail.com</username>
+                                    <password>odi123123</password>
                                 </auth>
                             </to>
                         </configuration>
