--- a/nginx/config.conf
+++ b/nginx/config.conf
@@ -8,16 +8,18 @@ http {
 
     server {
         listen 443 ssl;
+        server_name motobudzet.pl www.motobudzet.pl;
         ssl_certificate /etc/nginx/certificate.crt;
         ssl_certificate_key /etc/nginx/private.key;
         access_log /var/log/nginx/access.log upstreaminfo;
 
         location / {
-            proxy_pass https://host.docker.internal:20134/;
-            proxy_set_header Host $http_host;
+            proxy_pass http://mb-api:20134/;
+            proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
         }
     }
 }
