--- a/nginx/config.conf
+++ b/nginx/config.conf
@@ -1,6 +1,7 @@
 events {}
 
 http {
+    client_max_body_size 10m;
     log_format upstreaminfo '$remote_addr - $remote_user [$time_local] '
                             '"$request" $status $body_bytes_sent '
                             '"$http_referer" "$http_user_agent" '
