--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -153,8 +153,28 @@ services:
       - logging
     restart: unless-stopped
 
+  jenkins:
+    build:
+      context: ./jenkins
+      dockerfile: Dockerfile
+    container_name: jenkins
+    ports:
+      - "27015:8080"
+      - "50000:50000"
+    volumes:
+      - jenkins-data:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./jenkins/jenkins.yml:/var/jenkins_home/casc_configs/jenkins.yml:ro
+      - ./jenkins/plugins.txt:/usr/share/jenkins/ref/plugins.txt
+    environment:
+      JAVA_OPTS: "-Djenkins.install.runSetupWizard=false"
+      CASC_JENKINS_CONFIG: "/var/jenkins_home/casc_configs/jenkins.yml"
+    command: >
+      sh -c "jenkins-plugin-cli -f /usr/share/jenkins/ref/plugins.txt && exec /usr/local/bin/jenkins.sh"
+    restart: unless-stopped
+
 volumes:
-  logs:
+  jenkins-data:
   postgres-data:
   pgadmin-data:
   grafana-data:
@@ -164,3 +184,4 @@ networks:
     driver: bridge
   logging:
     driver: bridge
+
