--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     ports:
       - "20134:20134"
     volumes:
-      - ./logging_infrastructure/api-logs:/var/log/spring
+      - api-logs:/var/log/spring
       - ./files/public:/app/files/public
       - ./files/private:/app/files/private
     environment:
@@ -133,7 +133,7 @@ services:
     container_name: promtail
     image: grafana/promtail:latest
     volumes:
-      - ./logging_infrastructure/api-logs:/var/log/spring
+      - api-logs:/var/log/spring
       - ./logging_infrastructure/promtail-config.yml:/etc/promtail/config.yml
     command: -config.file=/etc/promtail/config.yml
     depends_on:
@@ -166,14 +166,22 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./jenkins/jenkins.yml:/var/jenkins_home/casc_configs/jenkins.yml:ro
       - ./jenkins/plugins.txt:/usr/share/jenkins/ref/plugins.txt
+      - api-logs:/var/log/spring
     environment:
       JAVA_OPTS: "-Djenkins.install.runSetupWizard=false"
       CASC_JENKINS_CONFIG: "/var/jenkins_home/casc_configs/jenkins.yml"
     command: >
       sh -c "jenkins-plugin-cli -f /usr/share/jenkins/ref/plugins.txt && exec /usr/local/bin/jenkins.sh"
+
     restart: unless-stopped
 
 volumes:
+  api-logs:
+    driver: local
+    driver_opts:
+      type: none
+      device: ./logging_infrastructure/api-logs
+      o: bind
   jenkins-data:
   postgres-data:
   pgadmin-data:
