--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 
     <modules>
         <module>motobudzetapi</module>
+        <module>commons</module>
     </modules>
 
     <name>mb-project</name>
@@ -43,6 +44,10 @@
                 <version>${spring.boot.dependencies.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
             </dependency>
         </dependencies>
     </dependencyManagement>
